# DevoirBot

./: .env.example  .gitignore  APIHandler.py  README.md  TODO.md  keep_alive.py  main.py  pyproject.toml  requirements.txt  utils.py
backend/: APIHandler.py  keep_alive.py  utils.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/ProjectItem/: index.js  styles.js
frontend/src/components/ProjectItems/: index.js
frontend/src/components/ProjectList/: index.js  styles.js  wrapper.js
frontend/src/components/SwitchTheme/: index.js
